--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		</header>
 		<section id="topsection">
 			<div>
-				<h3>If only she had studied fashion design instead of marine biology!</h3>
+				<h3>If only she studied fashion design instead of greek mythology!</h3>
 				<a class="button" href="birth-of-venus">Learn More</a>
 			</div>
 		</section>
