--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 	<head>
 		<title>evrlearn</title>
 		
-		<meta name="description" content="This website exists for testing purposes only.">
-		<meta name="keywords" content="website, testing, html">
+		<meta name="description" content="We want to nurture the potential of all people and connect them with skills that will help them realize their dreams. Because we believe that lifelong learning will make a valuable contribution to greater humanity and freedom in our fast-paced world.">
+		<meta name="keywords" content="evlearn, learning">
 		<meta name="author" content="Julian Brasse">
 		
 		<meta property="og:site_name" content="evrlearn">
-		<meta property="og:title" content="Website">
-		<meta property="og:description" content="This website exists for testing purposes only.">
+		<meta property="og:title" content="evrlearn">
+		<meta property="og:description" content="We want to nurture the potential of all people and connect them with skills that will help them realize their dreams. Because we believe that lifelong learning will make a valuable contribution to greater humanity and freedom in our fast-paced world.">
 		<meta property="og:type" content="website">
-		<meta property="og:url" content="="//websitefortesting.ch">
-		<meta property="og:image" content="//websitefortesting.ch/content/social_preview.jpg">
+		<meta property="og:url" content="="//julianbrasse.github.io/evrlearn">
+		<meta property="og:image" content="//julianbrasse.github.io/evrlearn/content/historicalfigures/venus_birth.jpg">
 		<meta property="og:locale" content="en_CH">
 		
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
