--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
 		<link rel="icon" href="content/logo/favicon.svg">
 	</head>
 	<body>
+		<nav class="usp">
+			<h6>Free for students</h6>
+			<h6>Over 3000 courses available</h6>
+			<h6>Trusted shops certification</h6>
+		</nav>
 		<header>
 			<div class="logo">
 				<img src="content/logo/logo.svg">
