--- a/index.html
+++ b/index.html
@@ -2,11 +2,9 @@
 <html lang="en_CH">
 	<head>
 		<title>evrlearn</title>
-		
 		<meta name="description" content="We want to nurture the potential of all people and connect them with skills that will help them realize their dreams. Because we believe that lifelong learning will make a valuable contribution to greater humanity and freedom in our fast-paced world.">
 		<meta name="keywords" content="evlearn, learning">
 		<meta name="author" content="Julian Brasse">
-		
 		<meta property="og:site_name" content="evrlearn">
 		<meta property="og:title" content="evrlearn">
 		<meta property="og:description" content="We want to nurture the potential of all people and connect them with skills that will help them realize their dreams. Because we believe that lifelong learning will make a valuable contribution to greater humanity and freedom in our fast-paced world.">
@@ -14,10 +12,8 @@
 		<meta property="og:url" content="=" julianbrasse.github.io="" evrlearn"="">
 		<meta property="og:image" content="//julianbrasse.github.io/evrlearn/content/historicfigures/venus_birth.jpg">
 		<meta property="og:locale" content="en_CH">
-		
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta charset="UTF-8">
-		
 		<link rel="stylesheet" href="style/stylesheet.css">
 		<link rel="icon" href="content/logo/favicon.svg">
 	</head>
@@ -25,7 +21,7 @@
 		<nav class="usp">
 			<h6>Free for students</h6>
 			<h6>Over 3000 courses available</h6>
-			<h6>Trusted shops certification</h6>
+			<h6>Orell Füssli Partner</h6>
 		</nav>
 		<header>
 			<div class="logo">
@@ -33,24 +29,21 @@
 				<h1>evrlearn</h1>
 			</div>
 			<nav>
+				<input type="text" placeholder="What do you want to learn?" name="search">
 				<div>
-					<a href="providers">For Providers</a>
-					<a href="companies">For Companies</a>
-					<a href="blog">Blog</a>
-				</div>
-				<div>
-					<input type="text" placeholder="Search for courses" name="search">
+					<a href="bildungsbereiche">Discover</a>
 					<a class="button" href="account">Account</a>
 				</div>
 			</nav>
 		</header>
-		<section id="topsection">
-			<div>
-				<h3>If only she'd studied fashion design instead of greek mythology.</h3>
-				<a class="button" href="birth-of-venus">Learn More</a>
-			</div>
-		</section>
 		<main>
+			<section>
+				<aside>
+					<h3>With us you can master your further education with success.</h3>
+					<a class="button" href="kurse">Courses</a>
+					<a class="button" href="profil">Profile your Skills</a>
+				</aside>
+			</section>
 		</main>
 		<footer>
 			<h4>© evrlearn 2023</h4>
